--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h3,
   font-size: 1rem;
   min-width: 200px;
   border: 1px solid transparent;
-  padding: 0.8rem 1.8rem;
+  padding: 0.8rem 1rem;
   border-radius: 999px;
   font-weight: 600;
   cursor: pointer;
@@ -349,13 +349,15 @@ custom-cursor-default-hover .campo-grupo input {
 .btn-perigo:hover {
   filter: grayscale(100%) sepia(100%) hue-rotate(-50deg) saturate(500%);
 }
-
+.btn-container,
 .btn-container-form {
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 20px;
   width: 100%;
   margin-top: 30px;
-  padding-bottom: 10px;
+  flex-wrap: wrap;
 }
 
 /* Tabela Usuários */
